refactor: improve chart UI layout and query display
Move percent unit label from Y-axis title to dedicated element
above the chart for cleaner presentation. Remove "Query:" prefix
from query display, showing only the PromQL query string.

Signed-off-by: Alberto Falossi <afalossi@redhat.com>

--- a/pkg/mcp/ui/chart.html
+++ b/pkg/mcp/ui/chart.html
@@ -10,10 +10,11 @@
 </head>
 <body>
   <div id="card" class="chart-card">
+    <div id="unit-label" class="unit-label"></div>
     <div id="chart-wrapper">
       <canvas id="chart-canvas"></canvas>
     </div>
-    <div id="query-display" class="query-text"><span class="query-label">Query:</span> <span id="query-value"></span></div>
+    <div id="query-display" class="query-text"><span id="query-value"></span></div>
   </div>
 <script>{{APP}}</script>
 </body>
