feat: add optional title parameter to range query chart
Add a 'title' input parameter to execute_range_query so the LLM can
provide a human-readable chart title (e.g., "API Error Rate Over Last
Hour"). The title is displayed above the chart when provided and hidden
when omitted. Update the test harness with a title selector dropdown.

Signed-off-by: Alberto Falossi <afalossi@redhat.com>

--- a/pkg/mcp/ui/chart.html
+++ b/pkg/mcp/ui/chart.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div id="card" class="chart-card">
+    <div id="chart-title" class="chart-title"></div>
     <div id="unit-label" class="unit-label"></div>
     <div id="chart-wrapper">
       <canvas id="chart-canvas"></canvas>
