feat: add interactive legend to chart UI
Add a custom HTML legend below the chart canvas that displays
dataset labels with color swatches. Clicking a legend item
toggles the corresponding dataset visibility. The legend is
scrollable with a max height and updates on chart render,
no-data, and chart destroy events.

Signed-off-by: Alberto Falossi <afalossi@redhat.com>

--- a/pkg/mcp/ui/chart.html
+++ b/pkg/mcp/ui/chart.html
@@ -15,6 +15,7 @@
     <div id="chart-wrapper">
       <canvas id="chart-canvas"></canvas>
     </div>
+    <div id="chart-legend" class="chart-legend"></div>
     <div id="query-display" class="query-text"><span id="query-value"></span></div>
   </div>
 <script>{{APP}}</script>
