feat: add copy button and drag-to-scroll to chart UI
Add a copy-to-clipboard button with inline SVG icon before the
PromQL query. Make the query and legend areas drag-to-scroll with
grab cursor. Restructure query footer as flex container so padding
is respected on both sides. Update test harness with text input
for title and revised time range options.

Signed-off-by: Alberto Falossi <afalossi@redhat.com>

--- a/pkg/mcp/ui/chart.html
+++ b/pkg/mcp/ui/chart.html
@@ -15,7 +15,7 @@
       <canvas id="chart-canvas"></canvas>
     </div>
     <div id="chart-legend" class="chart-legend"></div>
-    <div id="query-display" class="query-text"><span id="query-value"></span></div>
+    <div id="query-display" class="query-text"><button id="copy-query" class="copy-btn" title="Copy PromQL query"><svg viewBox="0 0 448 512" fill="currentColor"><path d="M320 448v40c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V120c0-13.3 10.7-24 24-24h72v296c0 30.9 25.1 56 56 56h168zm0-344V0H152c-13.3 0-24 10.7-24 24v368c0 13.3 10.7 24 24 24h272c13.3 0 24-10.7 24-24V128H344c-13.2 0-24-10.8-24-24zm121-31L375 7a24 24 0 0 0-17-7h-6v96h96v-6a24 24 0 0 0-7-17z"/></svg></button><span id="query-value"></span></div>
   </div>
 <script>{{APP}}</script>
 </body>
